css style changes to fix navbar on mobile

--- a/My-Webpage/src/style/NavBar.css
+++ b/My-Webpage/src/style/NavBar.css
@@ -61,7 +61,6 @@
     }
 
     .nav-links li a {
-        display: block; 
         padding: 10px 0; 
         border-top: 1px solid #555; 
     }
